--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lsr/core",
     "description": "Laser framework core.",
     "require-dev": {
-        "phpunit/phpunit": "10.0.x-dev"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
