--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,39 @@
 {
-    "name": "lsr/core",
-    "description": "Laser framework core.",
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Lsr\\Core\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Tomáš Vojík",
-            "email": "vojik@wboy.cz"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {}
+	"name": "lsr/core",
+	"description": "Laser framework core.",
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://packages.laserliga.cz"
+		}
+	],
+	"require-dev": {
+		"roave/security-advisories": "dev-latest",
+		"phpunit/phpunit": "^9.5"
+	},
+	"autoload": {
+		"psr-4": {
+			"Lsr\\Core\\": "src/"
+		}
+	},
+	"authors": [
+		{
+			"name": "Tomáš Vojík",
+			"email": "vojik@wboy.cz"
+		}
+	],
+	"require": {
+		"lsr/interfaces": "dev-master",
+		"ext-fileinfo": "*",
+		"ext-gettext": "*",
+		"ext-simplexml": "*",
+		"ext-ctype": "*",
+		"ext-mbstring": "*",
+		"ext-pdo_sqlite": "*",
+		"latte/latte": "3.0.0",
+		"nette/di": "^3.0",
+		"nette/caching": "^3.1",
+		"nette/http": "^3.1",
+		"ext-zip": "*"
+	}
 }
