:bug: Fix missing DI extension #4
Signed-off-by: Tomáš Vojík <vojik@wboy.cz>

--- a/services.neon
+++ b/services.neon
@@ -1,4 +1,5 @@
 parameters:
+	appDir: ROOT
 	tempDir: TMP_DIR
 	cache:
 		path: TMP_DIR.'cache.db'
@@ -32,6 +33,7 @@ services:
 			- templating
 search:
 	controllers:
+		in: %appDir%/src/Controllers
 		extends:
 			- Lsr\Core\Controller
 		tags:
