:bug: Added all controller types to DI search
Signed-off-by: Tomáš Vojík <vojik@wboy.cz>

--- a/services.neon
+++ b/services.neon
@@ -34,5 +34,7 @@ search:
 		in: %constants.appDir%/src/Controllers
 		extends:
 			- Lsr\Core\Controller
+			- Lsr\Core\ApiController
+			- Lsr\Core\CliController
 		tags:
 			- controllers
