--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
 		"nette/di": "^3.0",
 		"nette/caching": "^3.1",
 		"nette/http": "^3.1",
-		"ext-zip": "*"
+		"ext-zip": "*",
+		"ext-apache": "*"
 	}
 }
