:zap: Added latte cache extension
Signed-off-by: Tomáš Vojík <vojik@wboy.cz>

--- a/services.neon
+++ b/services.neon
@@ -9,7 +9,8 @@ extensions:
 	search: Nette\DI\Extensions\SearchExtension(%constants.tempDir%)
 services:
 	cache.storage: Nette\Caching\Storages\SQLiteStorage(%cache.path%)
-	cache: Nette\Caching\Cache
+	cache: Nette\Caching\Cache(@cache.storage)
+	cache.extension.latte: Nette\Bridges\CacheLatte\CacheExtension(@cache.storage)
 	templating.latte.extension:
 		create: Lsr\Core\Templating\LatteExtension()
 		tags:
@@ -19,6 +20,7 @@ services:
 		setup:
 			- setTempDirectory(%templating.tmpPath%)
 			- addExtension(@templating.latte.extension)
+			- addExtension(@cache.extension.latte)
 		tags:
 			- templating
 	templating.latte:
