--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-latest",
-		"phpunit/phpunit": "^9.5"
+		"phpunit/phpunit": "^9.5",
+		"phpstan/phpstan": "^1.8",
+		"phpstan/extension-installer": "^1.1",
+		"phpstan/phpstan-dibi": "^1.0",
+		"phpstan/phpstan-nette": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -42,6 +46,13 @@
 		"nette/caching": "^3.1",
 		"nette/http": "^3.1",
 		"ext-zip": "*",
-		"dibi/dibi": "^4.2"
+		"dibi/dibi": "^4.2",
+		"lsr/routing": "^0.1",
+		"lsr/request": "^0.1"
+	},
+	"config": {
+		"allow-plugins": {
+			"phpstan/extension-installer": true
+		}
 	}
 }
