:bug: Fix multiline strings in neon file
Signed-off-by: Tomáš Vojík <vojik@wboy.cz>

--- a/migrations.neon
+++ b/migrations.neon
@@ -1,7 +1,9 @@
 tables:
 	page_info:
-		definition: "(
+		definition: '''
+		(
 			`key` varchar(30) NOT NULL DEFAULT '',
 			`value` text DEFAULT NULL,
 			PRIMARY KEY (`key`)
-		) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;"
+		) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
+		'''
