--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "lsr/core",
 	"description": "Laser framework core.",
-	"version": "dev-0.2.0",
+	"version": "0.2.0",
 	"repositories": [
 		{
 			"type": "composer",
