--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "lsr/core",
 	"description": "Laser framework core.",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"repositories": [
 		{
 			"type": "composer",
@@ -36,10 +36,10 @@
 			"email": "vojik@wboy.cz"
 		}
 	],
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
 	"require": {
-		"lsr/interfaces": "^0.2-dev",
-		"lsr/logging": "^0.2-dev",
+		"lsr/interfaces": "^0.2",
+		"lsr/logging": "^0.2",
 		"ext-fileinfo": "*",
 		"ext-gettext": "*",
 		"ext-simplexml": "*",
@@ -52,8 +52,8 @@
 		"nette/http": "^3.1",
 		"ext-zip": "*",
 		"dibi/dibi": "^4.2",
-		"lsr/routing": "^0.2-dev",
-		"lsr/request": "^0.2-dev"
+		"lsr/routing": "^0.2",
+		"lsr/request": "^0.2"
 	},
 	"config": {
 		"allow-plugins": {
