--- a/services.neon
+++ b/services.neon
@@ -8,6 +8,10 @@ parameters:
 extensions:
 	search: Nette\DI\Extensions\SearchExtension(%constants.tempDir%)
 services:
+	session:
+		create: \Lsr\Core\Session::getInstance()
+		setup:
+			- init()
 	cache.storage: Nette\Caching\Storages\SQLiteStorage(%cache.path%)
 	cache: Lsr\Core\Caching\Cache(@cache.storage)
 	cache.extension.latte: Nette\Bridges\CacheLatte\CacheExtension(@cache.storage)
