:sparkles: Improve cache control and model handling in the application
This commit introduces enhancements to cache control by adding the Cache-Control header for AJAX data responses. It also improves model handling, specifically targeting the fetch, update, and insert methods and handling of table joins in ModelQuery. Furthermore, various bug fixes and code improvements have been applied across different sections of the codebase, alongside modifications in router paths comparison and service configurations.

Signed-off-by: Tomáš Vojík <vojik@wboy.cz>

--- a/services.neon
+++ b/services.neon
@@ -20,7 +20,7 @@ services:
 		setup:
 			- init()
 	cache.storage: Nette\Caching\Storages\SQLiteStorage(%cache.path%)
-	cache: Lsr\Core\Caching\Cache(@cache.storage)
+	cache: Lsr\Core\Caching\Cache(@cache.storage, null, %constants.debug%)
 	cache.extension.latte: Nette\Bridges\CacheLatte\CacheExtension(@cache.storage)
 	templating.latte.extension:
 		create: Lsr\Core\Templating\LatteExtension()
