:arrow_up: phpstan upgrade

--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
   ],
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "docs": "doxygen"
+    "docs": "doxygen",
+    "phpstan": "./vendor/bin/phpstan"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
     "phpunit/phpunit": "^11",
-    "phpstan/phpstan": "^1.10",
+    "phpstan/phpstan": "^2.0",
     "phpstan/extension-installer": "^1.2",
-    "phpstan/phpstan-dibi": "^1.0",
-    "phpstan/phpstan-nette": "^1.2"
+    "phpstan/phpstan-dibi": "^2.0",
+    "phpstan/phpstan-nette": "^2.0"
   },
   "autoload": {
     "psr-4": {
