--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,9 +3,12 @@ parameters:
 		- LANGUAGE_DIR
 		- LANGUAGE_FILE_NAME
 		- DEFAULT_LANGUAGE
+		- ROOT
 	editorUrl: 'phpstorm://open?file=%%file%%&line=%%line%%'
-	level: max
+	level: 8
 	paths:
 		- src
-		- tests
+		- config
+		- tests/bootstrap.php
+		- tests/TestCases
 	tmpDir: temp
