:bug: Enhance session management with flash message support - Added flash message handling methods in Session and NativeSession classes. - Updated Controller to utilize flash messages. - Refactored error and notice handling in requests. - Improved session initialization and data handling.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,3 +12,5 @@ parameters:
 		- tests/bootstrap.php
 		- tests/TestCases
 	tmpDir: temp
+	typeAliases:
+		LinkArray: 'array<string|int, string|\Stringable|numeric>'
